2004-08-15 Niklas Knutsson  <nq@altern.org>

	* Fix prefix selection when first positive/negative exponent prefix
	* No prefix in result prefix menu
	* Only left parenthesis where added around vector!
	* Make the title for mils more descriptive
	* FIx matrix multiplication

2004-08-14 Niklas Knutsson  <nq@altern.org>

	* Make no comparison to solve error message more informative
	* Do not factorize if factor is not non-zero
	* Fix prefix selection with negative exponent prefixes
	* Fix prefix selection with denominator prefix enabled

2004-08-13 Niklas Knutsson  <nq@altern.org>

	* Fix concatenate()
	* Add localized full name to ans variable
	* Make sure that completion pops down when going back in history
	* Set minimum arguments to 1 for mergevectors()

2004-08-12 Niklas Knutsson  <nq@altern.org>

	* Fix derangements() which was broken due to changed interpretion of -1^x
	* CALCULATOR->u_rad was null
	* True and False variables
	* "yes" -> "Yes" and "no" -> "No"
	* Localize "True" and "False" radio buttons
	* Add *.xml.in files to the dist tar sources
	* Complete exp1 in "2+5exp1"
	* Add undefined variable
	* Fix ids in text arguments when function is used in other function (fixes distribution functions)
	* Show classification in atom() dialog

2004-08-11 Niklas Knutsson  <nq@altern.org>

	* Remove double decimal points
	* Nicer unit printing
	* Warn in name edit dialog if name is used
	* Update documentation
	* Use gtk-paste instead of gtk-go-forward icon for insert
	* Properties dialog for atoms in periodic table
	* Respect max decimals with show ending zeroes
	* Fix precision typos which made objects with undefined precision approximate
	* Make element properties selectable
	* Paste function instead of value of element property
	* Display classification in element dialog
	* Unformat parsed function expression
	* Make sure that no unwanted prefixes are left when function expression has been parsed