@@ -819,13 +819,6 @@
 			    </widget>
 			  </child>
 
-			  <child>
-			    <widget class="GtkMenuItem" id="item60">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Giac</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
 			</widget>
 		      </child>
 		    </widget>
