@@ -85,8 +85,8 @@ enum {
 	MENU_ARGUMENT_TYPE_UNIT,
 	MENU_ARGUMENT_TYPE_VARIABLE,
 	MENU_ARGUMENT_TYPE_FILE,
-	MENU_ARGUMENT_TYPE_ANGLE,
-	MENU_ARGUMENT_TYPE_GIAC
+	MENU_ARGUMENT_TYPE_ANGLE
+//	MENU_ARGUMENT_TYPE_GIAC
 };
 
 enum {
